Component memory usage reporting: component categories introduced
Bug: 240666712
Test: HeapAnalyzerTest#testCategoryComponentData
Change-Id: I1292ab0abcb3408b68f9d7d9356e58c38512ab61

GitOrigin-RevId: 7e2e4f59fb8476ba095e1b9c53c618aa52ffae50